[package]
name = "sov-demo-rollup"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = "sovereign.xyz"
publish = false
resolver = "2"
default-run = "sov-demo-rollup"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# non-optional dependencies
sov-celestia-adapter = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191" }
const-rollup-config = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191" }
sov-stf-runner = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191" }
sov-rollup-interface = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191" }
sov-modules-stf-template = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191" }
sov-modules-api = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191" }
demo-stf = { path = "../demo-stf" }
# methods = { path = "../demo-prover/methods" }
async-trait = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
borsh = { workspace = true, features = ["bytes"], optional = true }
jsonrpsee = { workspace = true, features = ["http-client", "server"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
secp256k1 = { workspace = true, optional = true }

tokio = { workspace = true, optional = true }
reth-primitives = { workspace = true, optional = true }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"], optional = true }

sov-db = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191", optional = true }
sov-ethereum = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191", optional = true }
sov-sequencer = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191", optional = true  }
sov-risc0-adapter = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191" }
sov-state = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191" }
sov-cli = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191", optional = true }
clap = { workspace = true, optional = true}


[dev-dependencies]
sov-evm = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191", features = ["smart_contracts"] }
sov-bank = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191", features = ["native"] }
borsh = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
reqwest = "0.11"
tendermint = "0.32"
tempfile = { workspace = true }
proptest = { workspace = true }
sov-rollup-interface = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191", features = ["fuzzing"] }
tokio = { workspace = true }
sov-demo-rollup = { path = ".", features = ["native"] }
prometheus = "0.11.0"
prettytable-rs = "^0.10"
criterion = "0.5.1"

ethereum-types = { workspace = true }
ethers-core = { workspace = true }
ethers-contract = { workspace = true }
ethers-middleware = { workspace = true }
ethers-providers = { workspace = true }
ethers-signers = { workspace = true }
ethers = { workspace = true }
revm = { workspace = true }

[features]
default = ["native"] # Deviate from convention by making the "native" feature active by default. This aligns with how this package is meant to be used (as a binary first, library second).
experimental = ["default", "sov-ethereum/experimental", "reth-primitives", "secp256k1", "demo-stf/experimental", "sov-ethereum/local"]
native = ["anyhow", "jsonrpsee", "serde", "serde_json", "tracing", "tokio", "tracing-subscriber",
	"demo-stf/native", "sov-modules-stf-template/native", "sov-risc0-adapter/native", "sov-modules-api/native",
	"sov-state/native", "sov-cli", "clap", "sov-celestia-adapter/native", "sov-db", "sov-sequencer", "sov-stf-runner/native",
	"sov-modules-api/native", "sov-rollup-interface/native"]
bench = ["native", "async-trait", "borsh", "hex"]
offchain = ["demo-stf/offchain"]

[[bench]]
name = "rollup_bench"
harness = false
required-features = ["bench"]

[[bench]]
name = "rollup_coarse_measure"
harness = false
required-features = ["bench"]

[[bench]]
name = "rng_xfers"
required-features = ["bench"]

[[bin]]
name = "sov-cli"
path = "src/sov-cli/main.rs"
required-features = ["native"]

[[bin]]
name = "sov-demo-rollup"
path = "src/main.rs"
required-features = ["native"]
