[package]
name = "sov-demo-rollup"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = "sovereign.xyz"
publish = false
resolver = "2"
default-run = "sov-demo-rollup"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# non-optional dependencies
sov-celestia-adapter = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc", features = ["native"] }
const-rollup-config = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc" }
sov-stf-runner = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc", features = ["native"] }
sov-rollup-interface = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc", features = ["native"] }
sov-modules-stf-template = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc", features = ["native"] }
sov-modules-api = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc", features = ["native"] }
sov-nft-module = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc"}
demo-stf = { path = "./stf", features = ["native"] }
risc0 = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc" }
borsh = { workspace = true, features = ["bytes"]}
async-trait = { workspace = true, optional = true }
anyhow = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client", "server"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true}
hex = { workspace = true, optional = true }
secp256k1 = { workspace = true, optional = true }


tokio = { workspace = true }
reth-primitives = { workspace = true, optional = true }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

sov-db = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc" }
sov-ethereum = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc", optional = true }
sov-sequencer = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc" }
sov-risc0-adapter = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc", features = ["native"] }
sov-state = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc", features = ["native"] }
sov-cli = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc" }
clap = { workspace = true}

[dev-dependencies]
sov-rollup-interface = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc", features = ["fuzzing"] }
sov-evm = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc", features = ["smart_contracts"] }
sov-bank = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc", features = ["native"] }
sov-zk-cycle-macros = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc" }

borsh = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true }

ethereum-types = { workspace = true }
ethers-core = { workspace = true }
ethers-contract = { workspace = true }
ethers-middleware = { workspace = true }
ethers-providers = { workspace = true }
ethers-signers = { workspace = true }
ethers = { workspace = true }
revm = { workspace = true }

reqwest = "0.11"
tendermint = "0.32"
prometheus = "0.11.0"
prettytable-rs = "^0.10"
criterion = "0.5.1"
log = "0.4"
log4rs = "1.0"
regex = "1.5"

[features]
default = [] # Deviate from convention by making the "native" feature active by default. This aligns with how this package is meant to be used (as a binary first, library second).
experimental = ["default", "sov-ethereum/experimental", "reth-primitives", "secp256k1", "demo-stf/experimental", "sov-ethereum/local"]  
	
bench = ["async-trait", "hex", "sov-risc0-adapter/bench", "sov-zk-cycle-macros/bench", "risc0/bench"]
offchain = ["demo-stf/offchain"]

[[bench]]
name = "rollup_bench"
path = "benches/node/rollup_bench.rs"
harness = false
required-features = ["bench"]

[[bench]]
name = "rollup_coarse_measure"
path = "benches/node/rollup_coarse_measure.rs"
harness = false
required-features = ["bench"]

[[bench]]
name = "rng_xfers"
path = "benches/node/rng_xfers.rs"
required-features = ["bench"]


[[bench]]
name = "prover_bench"
path = "benches/prover/prover_bench.rs"
harness = false
required-features = ["bench"]


[[bin]]
name = "sov-cli"
path = "src/sov-cli/main.rs"

[[bin]]
name = "sov-nft-script"
path = "src/bin/sov_nft_script.rs"

[[bin]]
name = "sov-demo-rollup"
path = "src/main.rs"

