[package]
name = "demo-stf"
version = { workspace = true }
edition = { workspace = true }
resolver = "2"
authors = { workspace = true }
license = { workspace = true }
homepage = "sovereign.xyz"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
jsonrpsee = { workspace = true, features = ["http-client", "server"], optional = true }
tokio = { workspace = true, optional = true }
hex = { workspace = true }
tracing = { workspace = true }


sov-stf-runner = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191" }
sov-rollup-interface = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191" }
sov-cli = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191", optional = true }
sov-sequencer-registry = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191" }
sov-blob-storage = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191" }
sov-bank = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191" }
sov-nft-module = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191" }
sov-ibc = { git = "https://github.com/informalsystems/sovereign-ibc", rev = "86b54ae" }
sov-ibc-transfer = { git = "https://github.com/informalsystems/sovereign-ibc", rev = "86b54ae" }

sov-chain-state = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191" }
sov-modules-stf-template = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191" }
sov-value-setter = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191" }
sov-accounts = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191" }
sov-state = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191" }
sov-modules-api = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191" }
sov-sequencer = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191", optional = true }
# Only enable the evm on "experimental" feature
sov-evm = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191", optional = true }
reth-primitives = { workspace = true, optional = true }

[dev-dependencies]
sov-rollup-interface = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191", features = ["mocks"] }
sov-data-generators = { git = "https://github.com/informalsystems/sovereign-sdk.git", rev = "10a6191" }
demo-stf = { path = ".", features = ["native"] }
tempfile = { workspace = true }
rand = "0.8"

[features]
default = []
offchain = ["sov-nft-module/offchain"]
experimental = ["sov-evm/experimental", "reth-primitives"]
native = [
    "sov-stf-runner/native",
    "sov-bank/native",
    "sov-nft-module/native",
    "sov-ibc/native",
    "sov-ibc-transfer/native",
    "sov-cli",
    "sov-accounts/native",
    "sov-sequencer-registry/native",
    "sov-blob-storage/native",
    "sov-chain-state/native",
    "sov-value-setter/native",
    "sov-modules-api/native",
    "sov-rollup-interface/mocks",
    "sov-rollup-interface/native",
    "sov-modules-stf-template/native",
    "sov-sequencer",
    "clap",
    "serde_json",
    "jsonrpsee",
    "tokio",
    "toml",
]
