[package]
name = "demo-stf"
version = { workspace = true }
edition = { workspace = true }
resolver = "2"
authors = { workspace = true }
license = { workspace = true }
homepage = "sovereign.xyz"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
jsonrpsee = { workspace = true, features = ["http-client", "server"], optional = true }
tokio = { workspace = true, optional = true }
hex = { workspace = true }
tracing = { workspace = true }
reth-primitives = { workspace = true, optional = true }


sov-stf-runner = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc"}
sov-rollup-interface = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc"}
sov-cli = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc", optional = true }
sov-sequencer-registry = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc"}
sov-blob-storage = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc"}
sov-bank = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc"}
sov-nft-module = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc"}
simple-nft-module = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc"}

sov-chain-state = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc"}
sov-modules-stf-template = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc"}
sov-value-setter = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc"}
sov-accounts = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc"}
sov-state = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc"}
sov-modules-api = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc"}
sov-sequencer = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc", optional = true }
# Only enable the evm on "experimental" feature
sov-evm = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc", optional = true }

sov-ibc = { git = "https://github.com/informalsystems/sovereign-ibc", rev = "832dc2a" }
sov-ibc-transfer = { git = "https://github.com/informalsystems/sovereign-ibc", rev = "832dc2a" }

[dev-dependencies]
sov-rollup-interface = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc", features = ["mocks"] }
sov-data-generators = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc"}
demo-stf = { path = ".", features = ["native"] }
tempfile = { workspace = true }
rand = "0.8"

[features]
default = []
offchain = ["sov-nft-module/offchain"]
experimental = ["sov-evm/experimental", "reth-primitives"]
native = [
    "sov-stf-runner/native",
    "sov-bank/native",
    "sov-ibc/native",
    "sov-ibc-transfer/native",
    "sov-nft-module/native",
    "simple-nft-module/native",
    "sov-cli",
    "sov-accounts/native",
    "sov-sequencer-registry/native",
    "sov-blob-storage/native",
    "sov-chain-state/native",
    "sov-value-setter/native",
    "sov-modules-api/native",
    "sov-rollup-interface/mocks",
    "sov-rollup-interface/native",
    "sov-modules-stf-template/native",
    "sov-sequencer",
    "clap",
    "serde_json",
    "jsonrpsee",
    "tokio",
    "toml",
]