[package]
name = "sov-demo-prover-guest-celestia"
version = "0.2.0"
edition = "2021"
resolver = "2"

[workspace]

[dependencies]
anyhow = "1.0.68"
risc0-zkvm = { version = "0.18", default-features = false, features = ["std"] }
risc0-zkvm-platform = "0.18"
demo-stf = { path = "../../../stf" }
sov-risc0-adapter = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "farhad/demo-rollup-with-ibc" }
const-rollup-config = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "ibc-integration"}
sov-celestia-adapter = { git = "https://github.com/informalsystems/sovereign-sdk", branch = "ibc-integration"}


[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2/v0.10.6-risc0" }

[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

[features]
bench = [
	"sov-celestia-adapter/bench",
]
